--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^14.14.22",
-    "discord-akairo": "github:1Computer1/discord-akairo",
-    "discord.js": "github:discordjs/discord.js"
+    "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.5",
+    "discord-akairo": "*",
+    "discord.js": "*"
   }
 }
