--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
     "discord-akairo": "*",
-    "discord.js": "*"
+    "discord.js": "*",
+    "graphql": "^15.5.0"
   }
 }
